--- a/examples/threejs_vr_maxwell_equations.html
+++ b/examples/threejs_vr_maxwell_equations.html
@@ -46,6 +46,19 @@ https://threejs.org/
 
 -->
 
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>three.js 3D Maxwell Equations</title>
+		<style>
+			body { margin: 0; }
+			canvas { width: 100%; height: 100% }
+		</style>		
+	</head>
+	<body>
+
+	<script type="module">
 
 import * as THREE from '../build/three.module.js';
 import { VRButton } from './jsm/webxr/VRButton.js';
