--- a/examples/threejs_vr_maxwell_equations.html
+++ b/examples/threejs_vr_maxwell_equations.html
@@ -91,7 +91,7 @@ var curl_B = 0.0;   	    // variable to hold the curl of B
 
 var curl_E = 0.0;   	    // variable to hold the curl of E
 
-let dt = 0.5;       	    // time step (nanosecond,ns) 0.1
+let dt = 1.0;       	    // time step (nanosecond,ns)
 let dx = 1.0;		    // space step (meter,m)
 let c1 = 0.09;		    // speed of light squared m^2/(ns)^2
 let c2 = 0.11;		    // 1/(permittivity of space) Nm^2/(uc^2) where N=Newton, uc=microcoulomb
@@ -358,13 +358,13 @@ if(wait > 4) {
 	for(k=0;k<N-1;k++){
 
 	curl_B = By[i][j][k]-By[i][j][k+1]+Bz[i][j+1][k]-Bz[i][j][k];
-	Ex[i][j][k] = Ex[i][j][k] + dt * (c1 * c1 * curl_B - c2 * jx[i][j][k]); // Ampere's Law
+	Ex[i][j][k] = Ex[i][j][k] + dt * (c1 * c1 * curl_B / dr - c2 * jx[i][j][k]); // Ampere's Law
 
 	curl_B = -Bx[i][j][k]+Bx[i][j][k+1]+Bz[i][j][k]-Bz[i+1][j][k];
-	Ey[i][j][k] = Ey[i][j][k] + dt * (c1 * c1 * curl_B - c2 * jy[i][j][k]);
+	Ey[i][j][k] = Ey[i][j][k] + dt * (c1 * c1 * curl_B / dr - c2 * jy[i][j][k]);
 
 	curl_B = Bx[i][j][k]-Bx[i][j+1][k]-By[i][j][k]+By[i+1][j][k];
-	Ez[i][j][k] = Ez[i][j][k] + dt * (c1 * c1 * curl_B - c2 * jz[i][j][k]);
+	Ez[i][j][k] = Ez[i][j][k] + dt * (c1 * c1 * curl_B / dr - c2 * jz[i][j][k]);
 
 	}
 	}
@@ -377,13 +377,13 @@ if(wait > 4) {
 	for(k=1;k<N;k++){
 
 	curl_E = Ey[i][j][k-1]-Ey[i][j][k]+Ez[i][j][k]-Ez[i][j-1][k];
-	Bx[i][j][k] = Bx[i][j][k] - curl_E * dt;			                // Faraday's Law
+	Bx[i][j][k] = Bx[i][j][k] - curl_E / dr * dt;			                // Faraday's Law
 
 	curl_E = Ex[i][j][k]-Ex[i][j][k-1]-Ez[i][j][k]+Ez[i-1][j][k];
-	By[i][j][k] = By[i][j][k] - curl_E * dt;
+	By[i][j][k] = By[i][j][k] - curl_E / dr * dt;
 
 	curl_E = -Ex[i][j][k]+Ex[i][j-1][k]+Ey[i][j][k]-Ey[i-1][j][k];
-	Bz[i][j][k] = Bz[i][j][k] - curl_E * dt;
+	Bz[i][j][k] = Bz[i][j][k] - curl_E / dr * dt;
 
 	}
 	}
