--- a/examples/threejs_vr_maxwell_equations.html
+++ b/examples/threejs_vr_maxwell_equations.html
@@ -92,7 +92,7 @@ var curl_B = 0.0;   	    // variable to hold the curl of B
 var curl_E = 0.0;   	    // variable to hold the curl of E
 
 let dt = 1.0;       	    // time step (nanosecond,ns)
-let dx = 1.0;		    // space step (meter,m)
+let dr = 1.0;		    // space step (meter,m)
 let c1 = 0.09;		    // speed of light squared m^2/(ns)^2
 let c2 = 0.11;		    // 1/(permittivity of space) Nm^2/(uc^2) where N=Newton, uc=microcoulomb
 
