--- a/examples/threejs_ar_mass_on_a_spring.html
+++ b/examples/threejs_ar_mass_on_a_spring.html
@@ -59,7 +59,7 @@ https://threejs.org/
 
 import * as THREE from '../build/three.module.js';
 import { BoxLineGeometry } from './jsm/geometries/BoxLineGeometry.js';
-import { VRButton } from './jsm/webxr/ARButton.js';
+import { ARButton } from './jsm/webxr/ARButton.js';
 
 var camera, scene, renderer;
 var room, geometry, mass_geometry;
