--- a/examples/threejs_ar_mass_on_a_spring.html
+++ b/examples/threejs_ar_mass_on_a_spring.html
@@ -47,6 +47,7 @@ https://threejs.org/
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<title>three.js Mass on a Spring</title>
 		<style>
 			body { margin: 0; }
