--- a/examples/threejs_vr_mass_on_a_spring.html
+++ b/examples/threejs_vr_mass_on_a_spring.html
@@ -76,13 +76,13 @@ xold = 0.5;
 vold = 0;
 const dt = 0.05;
 
-let arrow;
-let dir;
-let origin;
-let length;
-let hex;
+var arrow;
+var dir;
+var origin;
+var length;
+var hex;
 
-let force_on_mass;
+var force_on_mass;
 
 init();
 animate();
